--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.datasource.url=jdbc:derby:memory:estimateDB;create=true
 # JPA
 spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
 spring.jpa.database-platform=org.hibernate.dialect.DerbyDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.default_schema=APP
